src/styles/Tracker.css
/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/*
    Now for the css for the tracker
    Sy
*/

html {
  font-size: 20px;
  background-color: beige;
}

h2 {
  font-size: 2rem;
}

.encountertracker {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.playerList {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 10px;
}

.monsterList {
  display: flex;
  flex-direction: column;
  margin: 10px;
}

.combatant {
  margin: 0px 10px 10px 0px;
  width: 20vw;
  height: 20vh;
}

.sidebar {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  width: 25vw;
  height: 100vh;
  align-items: center;
  background-color: green;
}

.combatArea {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 75vw;
}

.combatList {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 40vw;
}

